[gd_scene load_steps=3 format=3 uid="uid://cpyqdsmh5kxyk"]

[ext_resource type="Script" path="res://slide_test.gd" id="1_qdb7k"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_mvfuu"]

[node name="SlideTest" type="Node3D"]
script = ExtResource("1_qdb7k")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 105, 6)

[node name="CollisionDebug" type="MeshInstance3D" parent="."]
mesh = SubResource("ImmediateMesh_mvfuu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 0, 110, 0)
shadow_enabled = true

[node name="Options" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 130.0
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 90.0

[node name="OrientationOptionButton" type="OptionButton" parent="Options/VBoxContainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Face Y"
popup/item_0/id = 0
popup/item_1/text = "Face X"
popup/item_1/id = 1
popup/item_2/text = "Face Z"
popup/item_2/id = 2
popup/item_3/text = "Tumbling"
popup/item_3/id = 3

[node name="Done" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Done"

[connection signal="item_selected" from="Options/VBoxContainer/OrientationOptionButton" to="." method="_on_orientation_option_button_item_selected"]
[connection signal="pressed" from="Options/VBoxContainer/Done" to="." method="_on_done_pressed"]
